<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="44dp"
    android:layout_marginRight="29dp"
    android:layout_marginLeft="29dp"
    android:layout_marginBottom="20dp"
    android:id="@+id/login"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_txt"
        android:layout_marginTop="19dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="150dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/montserrat_bold_italic"
            android:gravity="top"
            android:lineSpacingExtra="-1sp"
            android:text="@string/welcome_bac"
            android:textAppearance="@style/welcome_bac" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp">


            <EditText
                android:id="@+id/username_or"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edit_form"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:drawableStart="@drawable/user"
                android:paddingStart="16dp"
                android:drawablePadding="16dp"
                android:hint="@string/username"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_blue"
                android:textSize="18sp"
                android:ems="10"
                android:inputType="text" />


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp">


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edit_form"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:drawableStart="@drawable/lock"
                android:paddingStart="16dp"
                android:drawablePadding="16dp"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_blue"
                android:textSize="18sp"
                android:ems="10"
                android:inputType="textPassword" />

    </RelativeLayout>

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="225dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/forgot_pass"
        android:gravity="center_horizontal|top"
        />

    <RelativeLayout
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Login"
            android:src="@drawable/login_btn"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/Loginbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:background="@null"
                android:text="@string/login"
                android:textAppearance="@style/username"
                android:textSize="18dp" />
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/or_continue"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="125dp"
        android:layout_height="15dp"
        android:text="@string/or_continue"
        android:textAppearance="@style/or_continue"
        android:gravity="center_horizontal|center_vertical"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginRight="8dp"
            android:src="@drawable/btn_google" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/apple_btn"
            android:layout_marginRight="8dp"
            android:layout_gravity="center"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook_btn"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/create_an_a"
            android:layout_width="132dp"
            android:layout_height="17dp"
            android:text="@string/create_an_account"
            android:textAppearance="@style/create_an_account"
            android:gravity="center_horizontal|center_vertical"
            />
        <TextView
            android:id="@+id/sign_uplogin"
            android:layout_width="57dp"
            android:layout_height="17dp"
            android:text="@string/sign_up"
            android:textAppearance="@style/sign_up"
            android:gravity="center_horizontal|center_vertical"
            />
    </LinearLayout>
</LinearLayout>
