<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="4dp"
    android:layout_marginRight="29dp"
    android:layout_marginLeft="29dp"
    android:layout_marginBottom="20dp"
    android:id="@+id/sign_up"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_txt"
        android:layout_marginTop="19dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="150dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/montserrat_bold_italic"
            android:gravity="top"
            android:lineSpacingExtra="-1sp"
            android:text="@string/create_an_a"
            android:textAppearance="@style/welcome_bac" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/edit_form"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:src="@drawable/user" />

            <EditText
                android:id="@+id/username_or"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:layout_marginLeft="4dp"
                android:text="@string/username"
                android:textAppearance="@style/username"
                android:textSize="18dp" />

        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/edit_form"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="6dp"
                android:src="@drawable/lock" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:layout_marginLeft="4dp"
                android:text="@string/password"
                android:textAppearance="@style/username"
                android:textSize="18dp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="45dp"
                android:src="@drawable/show_password"/>

        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/edit_form"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="6dp"
                android:src="@drawable/lock" />

            <EditText
                android:id="@+id/cnfpassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:layout_marginLeft="4dp"
                android:text="@string/cnf_password"
                android:textAppearance="@style/username"
                android:textSize="18dp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="45dp"
                android:src="@drawable/show_password"/>
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/by_clicking"
        android:layout_width="258dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/by_clicking"
        android:textAppearance="@style/by_clicking"
        android:gravity="top"
        />
    <RelativeLayout
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/createaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_btn"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/Loginbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:background="@null"
                android:text="@string/create_acco"
                android:textAppearance="@style/username"
                android:textSize="18dp" />
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/or_continue"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="125dp"
        android:layout_height="15dp"
        android:text="@string/or_continue"
        android:textAppearance="@style/or_continue"
        android:gravity="center_horizontal|center_vertical"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_google"
            android:layout_marginRight="8dp"
            android:layout_gravity="center_vertical|center_horizontal"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/apple_btn"
            android:layout_marginRight="8dp"
            android:layout_gravity="center"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook_btn"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/create_an_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_already_h"
            android:textAppearance="@style/create_an_account"
            />
        <TextView
            android:id="@+id/logintxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/login"
            android:textAppearance="@style/sign_up"
            />
    </LinearLayout>


</LinearLayout>