<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="44dp"
    android:layout_marginRight="29dp"
    android:layout_marginLeft="29dp"
    android:layout_marginBottom="20dp"
    android:id="@+id/forgot_pass"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_txt"
        android:layout_marginTop="19dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="150dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/montserrat_bold_italic"
            android:gravity="top"
            android:lineSpacingExtra="-1sp"
            android:text="@string/forgot_password"
            android:textAppearance="@style/welcome_bac" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp">

        <EditText
            android:id="@+id/username_or"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/edit_form"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/user"
            android:paddingStart="16dp"
            android:drawablePadding="16dp"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_blue"
            android:textSize="18sp"
            android:ems="10"
            android:inputType="text" />

    </RelativeLayout>
    <TextView
        android:id="@+id/we_will_sen"
        android:layout_width="282dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/we_will_sen"
        android:textAppearance="@style/we_will_sen"
        android:gravity="top"
        />

    <RelativeLayout
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_btn"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/Loginbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:background="@null"
                android:text="@string/submit"
                android:textAppearance="@style/username"
                android:textSize="18dp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>